--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
             <artifactId>hadoop-client</artifactId>  
             <version>2.5.1</version>  
         </dependency>
+        
+<dependency>
+    <groupId>org.codehaus.jackson</groupId>
+    <artifactId>jackson-mapper-asl</artifactId>
+    <version>1.9.13</version>
+</dependency>
+        
   </dependencies>
   <build>
     <finalName>littleMoviePlayer</finalName>
