--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
         <version>2.3.1</version>  
     </dependency>  
     
+            <dependency>  
+        <groupId>org.apache.struts</groupId>  
+        <artifactId>struts2-json-plugin</artifactId>  
+        <version>2.3.1</version>  
+    </dependency>  
+    
         <dependency>  
             <groupId>org.apache.hadoop</groupId>  
             <artifactId>hadoop-common</artifactId>  
