--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,17 @@
-    <!DOCTYPE web-app PUBLIC  
-     "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"  
-     "http://java.sun.com/dtd/web-app_2_3.dtd" >  
-      
-    <web-app>  
-      
-        <filter>  
-            <filter-name>struts2</filter-name>  
-            <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>  
-        </filter>  
-          
-        <filter-mapping>  
-            <filter-name>struts2</filter-name>  
-            <url-pattern>/*</url-pattern>  
-        </filter-mapping>  
-       
-    </web-app>  
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+  <display-name>lets_go_dutch</display-name>
+  <welcome-file-list>
+    <welcome-file>/WEB-INF/content/index.jsp</welcome-file>
+  </welcome-file-list>
+  <filter>
+      <filter-name>struts2</filter-name>
+      <filter-class>
+         org.apache.struts2.dispatcher.FilterDispatcher
+      </filter-class>
+   </filter>
+   <filter-mapping>
+      <filter-name>struts2</filter-name>
+      <url-pattern>/*</url-pattern>
+   </filter-mapping>
+</web-app>
